--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
+    <div>User agent in main window: <span id="user-agent"></span></div>
+    <div>User agent in service worker context: <span id="sw-user-agent"></span></div>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
